syntax = "proto3";

package org.pismery.demo.netty.grpc.generate;


option java_package = "org.pismery.demo.netty.grpc.generate";
option java_outer_classname = "GrpcDemo";

service GreeterService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    rpc LotsOfReplies(HelloRequest) returns (stream HelloReply) {}

    rpc LotsOfGreetings(stream HelloRequest) returns (HelloReply) {}
}


// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}